Start github page with modal + backend update
