# front/src/app/models/project.model.ts
@@ -1,4 +1,5 @@
 export class Project {
     name: string;
     description: string;
+    githubRepository: string;
 }
